@@ -10,8 +10,8 @@ import ir.darkdeveloper.bitkip.repo.DatabaseHelper;
 import ir.darkdeveloper.bitkip.repo.DownloadsRepo;
 import ir.darkdeveloper.bitkip.repo.QueuesRepo;
 import ir.darkdeveloper.bitkip.task.ChunksDownloadTask;
-import ir.darkdeveloper.bitkip.task.SpecialDownloadTask;
 import ir.darkdeveloper.bitkip.task.DownloadTask;
+import ir.darkdeveloper.bitkip.task.SpecialDownloadTask;
 import javafx.application.Platform;
 import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
@@ -24,7 +24,6 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 import static com.sun.jna.Platform.*;
@@ -40,8 +39,7 @@ public class DownloadOpUtils {
      * @param blocking of course, it should be done in concurrent environment otherwise it will block the main thread.
      *                 mostly using for queue downloading
      */
-    public static void triggerDownload(DownloadModel dm, long speed, long bytes, boolean resume, boolean blocking,
-                                       ExecutorService executor) throws ExecutionException, InterruptedException {
+    public static void triggerDownload(DownloadModel dm, long speed, long bytes, boolean resume, boolean blocking) throws ExecutionException, InterruptedException {
 
         try {
             Validations.fillNotFetchedData(dm);
@@ -93,8 +91,7 @@ public class DownloadOpUtils {
             DownloadsRepo.insertDownload(dm);
             mainTableUtils.addRow(dm);
         }
-        if (executor == null)
-            executor = Executors.newCachedThreadPool();
+        var executor = Executors.newVirtualThreadPerTaskExecutor();
         downloadTask.setExecutor(executor);
         log.info(("Starting download in " + (blocking ? "blocking" : "non-blocking") + ": %s").formatted(dm));
         if (blocking)
@@ -104,8 +101,7 @@ public class DownloadOpUtils {
 
     }
 
-    public static void startDownload(DownloadModel dm, long speedLimit, long byteLimit, boolean resume,
-                                     boolean blocking, ExecutorService executor) {
+    public static void startDownload(DownloadModel dm, long speedLimit, long byteLimit, boolean resume, boolean blocking) {
         if (!currentDownloadings.contains(dm)) {
             dm.setLastTryDate(LocalDateTime.now());
             dm.setDownloadStatus(DownloadStatus.Trying);
@@ -114,7 +110,7 @@ public class DownloadOpUtils {
             DownloadsRepo.updateDownloadLastTryDate(dm);
             mainTableUtils.refreshTable();
             try {
-                triggerDownload(dm, speedLimit, byteLimit, resume, blocking, executor);
+                triggerDownload(dm, speedLimit, byteLimit, resume, blocking);
             } catch (ExecutionException | InterruptedException e) {
                 log.error(e.getMessage());
             }
@@ -136,7 +132,7 @@ public class DownloadOpUtils {
                     mainTableUtils.refreshTable();
                     if (dm.isResumable()) {
                         log.info("Resuming download : " + dm);
-                        startDownload(dm, speedLimit, byteLimit, true, false, null);
+                        startDownload(dm, speedLimit, byteLimit, true, false);
                     } else
                         restartDownload(dm);
                     openDownloadings.stream().filter(dc -> dc.getDownloadModel().equals(dm))
@@ -169,7 +165,7 @@ public class DownloadOpUtils {
         String[] values = {"0", "0", "NULL", lastTryDate.toString(), dm.getTurnOffMode().name()};
         DatabaseHelper.updateCols(cols, values, DatabaseHelper.DOWNLOADS_TABLE_NAME, dmId);
         try {
-            triggerDownload(dm, 0, dm.getSize(), true, false, null);
+            triggerDownload(dm, 0, dm.getSize(), true, false);
         } catch (ExecutionException | InterruptedException e) {
             log.error(e.getMessage());
         }
@@ -385,7 +381,7 @@ public class DownloadOpUtils {
             dm.getQueues().add(allDownloadsQueue);
             dm.getQueues().add(queue);
             dm.setDownloadStatus(DownloadStatus.Trying);
-            DownloadOpUtils.startDownload(dm, 0, dm.getSize(), false, false, null);
+            DownloadOpUtils.startDownload(dm, 0, dm.getSize(), false, false);
             Notifications.create()
                     .title("Downloading now ...")
                     .text(dm.getName())
